# SprotectCloudPython

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
sp/: sp.py
src/: card.py  spclass.py  spcloud.py  user.py
